fixes actions column button layout on smaller devices

--- a/cdap-ui/app/directives/explore/explore.less
+++ b/cdap-ui/app/directives/explore/explore.less
@@ -67,7 +67,11 @@ my-explore {
 
         &.col-actions {
           width: 20%;
-
+          .btn-group-justified {
+            @media (max-width: @screen-xs-max) {
+              display: inline-block;
+            }
+          }
           button.btn {
             padding: 10px;
           }
